# project-mono

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SAFETY.md  SECURITY.md  SPEC.md  docker-compose.yml  init-repo.sh  launch_mini.py  push-to-github.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: autofix.yml  ci.yml  vector-audit.yml
config/: quibidt_constants.py  settings.py
dashboard/: README.md
data/: README.md  sample_input.json  seed.sql
docs/: aethel-grid-1440.md  api-reference.md  architecture.md  sk-kernel.md  we_have_finally_achieved_sovereignty.md
docs/codex/: role-mapping.json
experiments/notebooks/: README.md
frontend/: package.json
frontend/src/: App.jsx  index.jsx
humans/: __init__.py
humans/human_001/codex/rules/: base_rules.py
humans/human_001/digitwin/modes/passive/: passive_digitwin.py
humans/human_001/grapple_colony/claws/: easy_dock_protocol.py
humans/human_001/grapple_colony/nodes/: colony_runtime.py
humans/human_001/open_claw/runtime/: openclaw_runtime.py
infra/k8s/: deployment.yaml
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
invariants/: __init__.py  gpg_signature_check.py  graph_anomaly_check.py  infra_plan_check.py  ledger_presence.py  no_secrets.py  tests_and_types.py
ops/embeddings/: anomalies.json
ops/monitoring/: kernel-metrics.json
ops/simulations/kernel-scenarios/: 01-clean-merge.json  02-secret-leak.json  03-infra-destroy.json  04-emergency-bypass.json  05-anomaly-flagged.json
scripts/: alga_fold_kernel.py  ledger_append.py
src/: __init__.py  colony_commit.py  knowledge_loader.py  main.py  sovereign_agents.py  sovereign_api.py
src/aethel/: __init__.py  audit.py  constant.py  domains.py  psi_coefficient.py  stewardship.py
src/api/: routes.py
src/models/: __init__.py  base.py
src/quibidt/: __init__.py  aethel_grid.py  apollo.py  manna.py  state_machine.py  timing.py  treasury.py
src/utils/: helpers.py
tests/: conftest.py  test_health.py  test_kernel.py  test_stewardship.py
